feat: able to check active delegations just for today
