# docs/swagger.json
@@ -65,7 +65,7 @@
         },
         "/v1/staker/delegation/check": {
             "get": {
-                "description": "Check if a staker has an active delegation by the staker BTC address (Taproot only)",
+                "description": "Check if a staker has an active delegation by the staker BTC address (Taproot only)\nOptionally, you can provide a timeframe to check if the delegation is active within the provided timeframe\nThe avaiable timefram is \"today\" which checks after UTC 12AM of the current day",
                 "produces": [
                     "application/json"
                 ],
@@ -76,6 +76,15 @@
                         "name": "address",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "enum": [
+                            "today"
+                        ],
+                        "type": "string",
+                        "description": "Check if the delegation is active within the provided timeframe",
+                        "name": "timeframe",
+                        "in": "query"
                     }
                 ],
                 "responses": {
