# internal/api/handlers/staker.go
@@ -4,6 +4,7 @@ import (
 	"net/http"
 
 	"github.com/babylonchain/staking-api-service/internal/types"
+	"github.com/babylonchain/staking-api-service/internal/utils"
 )
 
 // GetStakerDelegations @Summary Get staker delegations
@@ -32,20 +33,45 @@ func (h *Handler) GetStakerDelegations(request *http.Request) (*Result, *types.E
 
 // CheckStakerDelegationExist @Summary Check if a staker has an active delegation
 // @Description Check if a staker has an active delegation by the staker BTC address (Taproot only)
+// @Description Optionally, you can provide a timeframe to check if the delegation is active within the provided timeframe
+// @Description The avaiable timefram is "today" which checks after UTC 12AM of the current day
 // @Produce json
 // @Param address query string true "Staker BTC address in Taproot format"
+// @Param timeframe query string false "Check if the delegation is active within the provided timeframe" Enums(today)
 // @Success 200 {object} Result "Result"
 // @Failure 400 {object} types.Error "Error: Bad Request"
 // @Router /v1/staker/delegation/check [get]
 func (h *Handler) CheckStakerDelegationExist(request *http.Request) (*Result, *types.Error) {
 	address := request.URL.Query().Get("address")
 	if address == "" {
-		return nil, types.NewErrorWithMsg(http.StatusBadRequest, types.BadRequest, "address is required")
+		return nil, types.NewErrorWithMsg(
+			http.StatusBadRequest, types.BadRequest, "address is required",
+		)
 	}
-	exist, err := h.services.CheckStakerHasActiveDelegationByAddress(request.Context(), address)
+	afterTimestamp, err := parseTimeframeToAfterTimestamp(request.URL.Query().Get("timeframe"))
+	if err != nil {
+		return nil, err
+	}
+
+	exist, err := h.services.CheckStakerHasActiveDelegationByAddress(
+		request.Context(), address, afterTimestamp,
+	)
 	if err != nil {
 		return nil, err
 	}
 
 	return NewResult(exist), nil
+}
+
+func parseTimeframeToAfterTimestamp(timeframe string) (int64, *types.Error) {
+	switch timeframe {
+	case "": // We ignore and return 0 if no timeframe is provided
+		return 0, nil
+	case "today":
+		return utils.GetTodayStartTimestampInSeconds(), nil
+	default:
+		return 0, types.NewErrorWithMsg(
+			http.StatusBadRequest, types.BadRequest, "invalid timeframe value",
+		)
+	}
 }
